# tiny

./: .travis.yml  LICENSE  README.md  tiny.cabal
app/: Main.hs
src/: LexicalParser.hs  Lib.hs  SyntaxTree.hs  TinyParser.hs  TokenParser.hs
test/: Doctests.hs  Spec.hs
