name:                tiny
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/kosen13s/tiny#README.md
license:             MIT
license-file:        LICENSE
author:              kosen13s
maintainer:          Iruyan-Zak<yuri.kazuna@gmail.com>, Roadagain<ringoh72@gmail.com>
copyright:           2017 kosen13s
category:            Programming language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, TinyParser
  build-depends:       base >= 4.7 && < 5
                    ,  mtl
  default-language:    Haskell2010

executable tiny-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tiny
  default-language:    Haskell2010

test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctests.hs
  build-depends:       base
                     , tiny
                     , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Werror
  default-language:    Haskell2010

test-suite tiny-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tiny
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kosen13s/tiny
